# Alliance-homework

./: readme.txt
ros2-develop/ros2_ws/src/cpp_dataview/: CMakeLists.txt  package.xml
ros2-develop/ros2_ws/src/cpp_dataview/include/cpp_dataview/: data_generator.hpp  signal_processor.hpp
ros2-develop/ros2_ws/src/cpp_dataview/launch/: dataview.launch.py
ros2-develop/ros2_ws/src/cpp_dataview/src/: data_generator.cpp  main.cpp  signal_generator.cpp  signal_processor.cpp
week3/vision/: .gitignore  CMakeLists.txt  README.md  armor_detection  build.sh
week3/vision/.cache/clangd/index/: armor_detector_cmd.cpp.CDCDFE9DF5801FB3.idx  armor_detector_cmd.h.2B738BC56E0FE9FD.idx  armor_detector_traditional.cpp.947DD3DE684FBAB7.idx  armor_detector_traditional.h.04974E94F7FA8DDE.idx  main_cmd.cpp.675E93A188F0E67C.idx  main_traditional.cpp.FA35BBF4AAD0310A.idx
week3/vision/.claude/: settings.local.json
week3/vision/dataset/: yolo_dataset.yaml
week3/vision/dataset/yolo_dataset/labels/: train.cache  val.cache
week3/vision/dataset/yolo_dataset/labels/train/: real.txt  video_test_hik_1_frame_0000.txt  video_test_hik_1_frame_0004.txt  video_test_hik_1_frame_0005.txt  video_test_hik_1_frame_0006.txt  video_test_hik_1_frame_0007.txt  video_test_hik_1_frame_0008.txt  video_test_hik_1_frame_0009.txt  video_test_hik_1_frame_0017.txt  video_test_hik_1_frame_0029.txt  video_test_hik_1_frame_0030.txt  video_test_hik_1_frame_0031.txt  video_test_hik_1_frame_0040.txt  video_test_hik_1_frame_0041.txt  video_test_hik_1_frame_0043.txt  video_test_hik_1_frame_0052.txt  video_test_hik_1_frame_0053.txt  video_test_hik_1_frame_0054.txt  video_test_hik_1_frame_0055.txt  video_test_hik_1_frame_0056.txt  video_test_hik_1_frame_0061.txt  video_test_hik_1_frame_0065.txt  video_test_hik_1_frame_0067.txt  video_test_hik_1_frame_0069.txt  video_test_hik_1_frame_0071.txt  video_test_hik_1_frame_0072.txt  video_test_hik_1_frame_0073.txt  video_test_hik_1_frame_0074.txt  video_test_hik_1_frame_0076.txt  video_test_hik_1_frame_0078.txt  video_test_hik_1_frame_0079.txt  video_test_hik_1_frame_0080.txt  video_test_hik_1_frame_0081.txt  video_test_hik_1_frame_0082.txt  video_test_hik_1_frame_0083.txt  video_test_hik_1_frame_0086.txt  video_test_hik_1_frame_0087.txt  video_test_hik_1_frame_0089.txt  video_test_hik_1_frame_0090.txt  video_test_hik_1_frame_0091.txt  (+39 more)
week3/vision/dataset/yolo_dataset/labels/val/: video_test_hik_1_frame_0001.txt  video_test_hik_1_frame_0002.txt  video_test_hik_1_frame_0003.txt  video_test_hik_1_frame_0032.txt  video_test_hik_1_frame_0033.txt  video_test_hik_1_frame_0034.txt  video_test_hik_1_frame_0042.txt  video_test_hik_1_frame_0047.txt  video_test_hik_1_frame_0050.txt  video_test_hik_1_frame_0051.txt  video_test_hik_1_frame_0075.txt  video_test_hik_1_frame_0077.txt  video_test_hik_1_frame_0084.txt  video_test_hik_1_frame_0085.txt  video_test_hik_1_frame_0088.txt  video_test_hik_1_frame_0096.txt  video_test_hik_1_frame_0120.txt  video_test_hik_1_frame_0135.txt  video_test_hik_1_frame_0145.txt  video_test_hik_1_frame_0150.txt  video_test_hik_1_frame_0157.txt
week3/vision/include/: armor_detector_cmd.h  armor_detector_traditional.h
week3/vision/runs/train/armor_detector_fixed/: args.yaml  results.csv
week3/vision/scripts/: armor_detection_display.py  armor_detection_image.py  convert_labelme_to_yolo.py  convert_to_onnx.py  train_armor_fixed.py
week3/vision/src/: armor_detector_cmd.cpp  armor_detector_traditional.cpp  main_cmd.cpp  main_traditional.cpp
week3/wavefilter&PID/ros2-develop/ros2_ws/src/wave_filters/: CMakeLists.txt  package.xml
week3/wavefilter&PID/ros2-develop/ros2_ws/src/wave_filters/launch/: filters_launch.py
week3/wavefilter&PID/ros2-develop/ros2_ws/src/wave_filters/src/: data_generator_node.cpp  lowpass_filter_node.cpp  (+1 more)
(+87 files in other folders)
